-bug#0001216: CSV Export for zoomed graph, results in Validation error
-bug#0001217: Default Graph Tree is not reflected in Left Pane of the graph page
-bug#0001223: Missing Hard return on last GPRINT causes bad formatting
-bug#0001228: LDAP server port not honored 
-bug#0001230: poller stops updating rrd files
-bug#0001236: set 'stats_recache' to zero when no re-index is present
-bug#0001240: SNMP string cleanup removes too many '=' signs
-bug#0001244: missing closing </form> on host.php
-bug#0001247: snmp ping won't work for snmp v3
-bug#0001256: Spine-poller.c : Bug in size string sysUptime 
-bug#0001258: "Remove Verification" is an ambiguous definition, leads to data loss
-bug#0001259: LDAP Authentication using Solaris 10 standard ldap client fails
-bug#0001262: Do not allow deletion of Graph Export User
-bug#0001268: resource/snmp_queries/net-snmp_disk.xml has incorrect name for "Percent Available"
-bug#0001273: Escape windows paths to accomodate spaces
-bug#0001281: ICMP Ping fails if an octet == 255
-bug#0001286: poller_item cache is not updated when "Data Input Method" is changed 
-bug#0001288: A host with ICMP ping selected as method does not properly perform ping
-bug#0001291: Reapply Suggested Names fails on Script Queries
-bug#0001293: When Creating Data Query Graphs, Performing Search will Cause List to Disappear 
-bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
-bug: Initialization of snmp_auth when using SNMP=NONE
-bug: Speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Add API Automation tool quietMode to additional functions
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: Database upgrade and cacti.sql differ
-bug: drop color setting background on FF does not work